fix: Add Item Overflow on Dataset Editor (#10983)
* move add item button to the top

* fix cypress

* fix cypress

--- a/superset-frontend/stylesheets/superset.less
+++ b/superset-frontend/stylesheets/superset.less
@@ -20,7 +20,7 @@
 @import './less/variables.less';
 @import './less/index.less';
 
-@datasource-sql-expression-width: 450px;
+@datasource-sql-expression-width: 315px;
 
 .alert.alert-danger > .debugger {
   color: @danger;
@@ -229,6 +229,7 @@ table.table-no-hover tr:hover {
   font-family: @font-family-monospace;
   display: inline-block;
   min-width: @datasource-sql-expression-width;
+  width: 100%;
 }
 
 .editable-title.datasource-sql-expression input {
